force-app/main/default/objects/INTGR_Case__c/INTGR_Case__c.object-meta.xml
<CustomObject>
    <description>!!! INTEGRATION OBJECT- DO NOT ALTER !!!
NICC-032393</description>
    <label>Integration Case</label>
    <nameField>
        <displayFormat>INTGR-{0000000}</displayFormat>
        <label>Integration Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>