force-app/main/default/objects/INTGR_Case__c/fields/Affected_Service__c.field-meta.xml
<CustomField>
    <fullName>Affected_Service__c</fullName>
    <description>NICC-030216 - Picklist value for customer to set that denotes what service has an issue.</description>
    <inlineHelpText>Picklist value for customer to set that denotes what service has an issue.</inlineHelpText>
    <label>Affected Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Portal</fullName>
            </value>
            <value>
                <fullName>CRS Solution</fullName>
            </value>
            <value>
                <fullName>CRS Administration Portal</fullName>
            </value>
            <value>
                <fullName>Payment Platform</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Content Manager or ACPMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>