force-app/main/default/objects/INTGR_Case__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <description>NICC-030216 - The group to be set by winaproach</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The group to be set by winaproach</inlineHelpText>
    <label>Assignment Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>