force-app/main/default/objects/INTGR_Case__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NICC-030216 - Lookup to case created by integration. This field is set by a Process Builder after Standard case is created via the Integration.</description>
    <inlineHelpText>Lookup to case created by integration. This field is set by a Process Builder after Standard case is created via the Integration.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Integration Cases</relationshipLabel>
    <relationshipName>Integration_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>