force-app/main/default/objects/INTGR_Case__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>NICC-030216 - Optional field integration user can use to specify a customer name related to the inbound incident.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional field integration user can use to specify a customer name related to the inbound incident.</inlineHelpText>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>