force-app/main/default/objects/INTGR_Case__c/fields/Customer_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Number__c</fullName>
    <description>NICC-030216 - User-friendly case/incident number of record in customer ITSM.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>User-friendly case/incident number of record in customer ITSM.</inlineHelpText>
    <label>Customer Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>