force-app/main/default/objects/INTGR_Case__c/fields/Customer_Ticket_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_System_Id__c</fullName>
    <description>NICC-030216 - Primary key (system id) of case/incident record in customer ITSM.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary key (system id) of case/incident record in customer ITSM.</inlineHelpText>
    <label>Customer Ticket System Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>