force-app/main/default/objects/INTGR_Case__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>NICC-030216 - Explanation that describes the issue in more detail.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Explanation that describes the issue in more detail.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>