force-app/main/default/objects/INTGR_Case__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>NICC-030216 - Field when the integration writes messages to for reference of the integration user.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field when the integration writes messages to for reference of the integration user.</inlineHelpText>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>