force-app/main/default/objects/INTGR_Case__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <description>NICC-030216 - Set by the integration user to denote the affected property&apos;s code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set by the integration user to denote the affected property&apos;s code.</inlineHelpText>
    <label>Hotel Code/Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>