force-app/main/default/objects/INTGR_Case__c/fields/INTGR_Account__c.field-meta.xml
<CustomField>
    <fullName>INTGR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-030216 - Lookup populated by integration code for ease in referencing field values and to create a relationship for a related list on the INTGR_Account__c Object</description>
    <inlineHelpText>Lookup to integration account record details</inlineHelpText>
    <label>Integration Account</label>
    <referenceTo>INTGR_Account__c</referenceTo>
    <relationshipLabel>Integration Cases</relationshipLabel>
    <relationshipName>Integration_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>