force-app/main/default/objects/INTGR_Case__c/fields/IsOperationalIssue__c.field-meta.xml
<CustomField>
    <fullName>IsOperationalIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-036797</description>
    <inlineHelpText>Indicates if the incident requires a software load (meaning if it is an operational issue).</inlineHelpText>
    <label>Operational Issue?</label>
    <type>Checkbox</type>
</CustomField>