force-app/main/default/objects/INTGR_Case__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>NICC-030216 - Value set by integration user and integration code for two-way (inbound/outbound) updating of Case severity.</description>
    <inlineHelpText>Value set by integration user and integration code for two-way (inbound/outbound) updating of Case severity.</inlineHelpText>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>