force-app/main/default/objects/INTGR_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>NICC-030216 - Value set by integration user and integration code for two-way (inbound/outbound) updating of Case status. Special rules apply (see documentation)</description>
    <inlineHelpText>Value set by integration user and integration code for two-way (inbound/outbound) updating of Case status. Special rules apply (see documentation)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
            <value>
                <fullName>Verified as Recovered</fullName>
            </value>
            <value>
                <fullName>Pending Master Recovery</fullName>
            </value>
            <value>
                <fullName>Pending Problem Resolution</fullName>
            </value>
            <value>
                <fullName>Pending Vendor</fullName>
            </value>
            <value>
                <fullName>Closed as recovered</fullName>
            </value>
            <value>
                <fullName>Closed as rejected</fullName>
            </value>
            <value>
                <fullName>Closed as withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>