force-app/main/default/objects/INTGR_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>NICC-030216 - Value set by integration user and integration code for two-way (inbound/outbound) updating of Case subject.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value set by integration user and integration code for two-way (inbound/outbound) updating of Case subject.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>