force-app/main/default/objects/INTGR_Case__c/fields/System_Affected__c.field-meta.xml
<CustomField>
    <fullName>System_Affected__c</fullName>
    <description>NICC-030216 - Restricted picklist value of Type of environment impacted by issue.</description>
    <inlineHelpText>Type of environment impacted by issue.</inlineHelpText>
    <label>System Affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Internal Test System</fullName>
                <isActive>false</isActive>
                <label>Internal Test System</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>