force-app/main/default/objects/INTGR_Case__c/fields/Work_Around_Available__c.field-meta.xml
<CustomField>
    <fullName>Work_Around_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-036797</description>
    <inlineHelpText>Indicates if customer was offered a workaround until problem corrected.</inlineHelpText>
    <label>Work Around Available</label>
    <type>Checkbox</type>
</CustomField>