force-app/main/default/objects/INTGR_Case__c/fields/Workaround_Provided_Date__c.field-meta.xml
<CustomField>
    <fullName>Workaround_Provided_Date__c</fullName>
    <description>NICC-036797</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates if customer was offered a workaround until problem corrected.</inlineHelpText>
    <label>Workaround Provided Date</label>
    <type>DateTime</type>
</CustomField>