force-app/main/default/objects/INTGR_Case__c/validationRules/INTGR_Case_Severity_value_decrease.validationRule-meta.xml
<ValidationRule>
    <fullName>INTGR_Case_Severity_value_decrease</fullName>
    <active>true</active>
    <description>NICC-032393 - The Severity field on the case can only be decreased during an update operation, and not increased.</description>
    <errorConditionFormula>AND(
CONTAINS($Profile.Name,&quot;Case Integration Customers&quot;),
$User.IsActive, 
ISCHANGED(Severity__c), 
VALUE(Text(PRIORVALUE(Severity__c))) &gt; VALUE(Text(Severity__c) ) 
)</errorConditionFormula>
    <errorMessage>Severity cannot be increased by the API, please contact Amadeus Global Escalation Support.</errorMessage>
</ValidationRule>