force-app/main/default/objects/INTGR_Case__c/validationRules/INTGR_Case_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>INTGR_Case_Status_Change</fullName>
    <active>false</active>
    <description>NICC-032393 - If current status is New or Pending Problem Resolution or Pending Master Recovery, the API cannot change the status.</description>
    <errorConditionFormula>AND (
	$Profile.Name = &quot;Case Integration Customers - PLATFORM&quot;, 
	$User.IsActive, 
	OR(
		AND(
			NOT(ISNEW()), 
			ISCHANGED(Status__c), 
			ISPICKVAL(PRIORVALUE (Status__c), &quot;Pending Problem Resolution&quot;),
			NOT(ISPICKVAL(Status__c,&quot;Pending Problem Resolution&quot;))
			),
		AND(
			NOT(ISNEW()), 
			ISCHANGED(Status__c), 
			ISPICKVAL(PRIORVALUE (Status__c), &quot;Pending Master Recovery&quot;),
			NOT(ISPICKVAL(Status__c,&quot;Pending Master Recovery&quot;))
			)
		)
)</errorConditionFormula>
    <errorMessage>If current status is New or Pending Problem Resolution or Pending Master Recovery, the API cannot change the status.</errorMessage>
</ValidationRule>