force-app/main/default/objects/INTGR_Case__c/validationRules/INTGR_Case_Update_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>INTGR_Case_Update_Closed_Case</fullName>
    <active>true</active>
    <description>NICC-032393 - If current status is Closed, User cannot make any further updates to the case (cannot change status or any other fields).</description>
    <errorConditionFormula>AND( 
OR(
ISCHANGED(Status__c),
ISCHANGED(Description__c),
ISCHANGED(Severity__c),
ISCHANGED(Subject__c),
ISCHANGED(Assignment_Group__c),
ISCHANGED(Hotel_Code__c),
ISCHANGED(System_Affected__c)
),	
OR(

   ISPICKVAL(PRIORVALUE (Status__c), &quot;Closed as recovered&quot;), 
   ISPICKVAL(PRIORVALUE (Status__c), &quot;Closed as rejected&quot;),
   ISPICKVAL(PRIORVALUE (Status__c), &quot;Closed as withdrawn&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Affected_Service__c</errorDisplayField>
    <errorMessage>Cannot change status or any other fields</errorMessage>
</ValidationRule>